# adaptiverag-work

./: .env.example  .env.template  .gitignore  Makefile  README.md  azure.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-chat-CodeGeneration.md  copilot-chat-CodeReview.md  copilot-chat-PullRequest.md  copilot-chat-TestGeneration.md  copilot-instructions.md
.github/workflows/: azure-dev.yml
backend/: Dockerfile  README.md  pyproject.toml  test_azure_monitor.py
backend/app/: main.py
backend/app/agents/: agent_configs.yaml  curator.py  orchestrator.py  registry.py  retriever.py  tools.py  verifier.py  writer.py
backend/app/api/: chat.py  company_search.py  ingest.py
backend/app/auth/: middleware.py
backend/app/core/: __init__.py  config.py  globals.py
backend/app/ingestion/: __init__.py  chunk.py  di_extract.py  download_10k.py  indexer_job.py
backend/app/models/: company_search.py
backend/app/services/: __init__.py  agentic_vector_rag_service.py  azure_ai_agents_service.py  azure_ai_project_service.py  azure_services.py  company_search_service.py  embedding_service.py  enhanced_document_processor.py  modular_document_processor.py  search_index_setup.py  skillset_manager.py  token_usage_tracker.py
backend/tests/: __init__.py  test_agents.py  test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx
infra/: abbreviations.json  main.bicep
infra/app/: api.bicep  app-service-plan.bicep  container-apps-env.bicep  (+5 more)
(+27 files in other folders)
